<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/container_main"
    style="?android:attr/buttonBarStyle"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <Button
        android:id="@+id/eyeem"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eyeem" />

    <Button
        android:id="@+id/klinker"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/klinker" />

    <Button
        android:id="@+id/doodle"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/doodle" />

    <Button
        android:id="@+id/plumillon"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plumillon" />

    <Button
        android:id="@+id/splitwise"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splitwise" />

</LinearLayout>
